# Engine

./: .gitignore  CMakeLists.txt  README.md
CMake/: Assimp.cmake  CMakeCommon.cmake  FreeGLUT.cmake  GLEW.cmake  GLI.cmake  GLM.cmake  OpenGL.cmake  Vulkan.cmake
Shader/: simple.frag  simple.tess  simple.vert
Source/: Config.h.in
Source/Core/: CMakeLists.txt
Source/Core/Inc/: Array.hpp  Common.h  Common.hpp  CoreConfig.h  DataBuffer.h  DataBuffer.hpp  IndexBuffer.h  IndexBuffer.hpp  Malloc.hpp  Math.hpp  MemTpl.hpp  Memory.hpp  Primitive.h  Primitive.hpp  RHI.hpp  RHIResource.hpp  RefCounted.h  RefCounted.hpp  VertexBuffer.h  VertexBuffer.hpp
Source/Core/Src/: DataBuffer.cpp  IndexBuffer.cpp  Malloc.cpp  Memory.cpp  Primitive.cpp  RHI.cpp  VertexBuffer.cpp
Source/RHIOpenGL/: CMakeLists.txt
Source/RHIOpenGL/Inc/: OpenGLRHI.hpp  OpenGLRHIResource.hpp  OpenGLShader.hpp  OpenGLState.hpp
Source/RHIOpenGL/Src/: OpenGLRHI.cpp  OpenGLShader.cpp
Source/Viewer/: CMakeLists.txt
Source/Viewer/Inc/: ViewerConfig.h
Source/Viewer/Src/: main.cpp
Source/VulkanSimple/: CMakeLists.txt
Source/VulkanSimple/Inc/: VulkanSimpleConfig.h
Source/VulkanSimple/Res/: frag.spv  vert.spv
Source/VulkanSimple/Src/: main.cpp
